--- a/trading_service/templates/registration/activation_email.html
+++ b/trading_service/templates/registration/activation_email.html
@@ -8,7 +8,7 @@
   <title>Trading Service registration confirmation</title>
 </head>
 <body>
-  <h1>Hello, {{ user.username }}. </h1>
+  <h1>Hello, {{ username }}. </h1>
   <p>We are glad to see you using our service.
   Please click on the link below to confirm your registration:</p>
 
