--- a/trading_service/templates/registration/reset_email.html
+++ b/trading_service/templates/registration/reset_email.html
@@ -5,10 +5,10 @@
   <meta name="viewport"
         content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Trading Service registration confirmation</title>
+  <title>Trading Service Password Reset</title>
 </head>
 <body>
-  <h1>Hello, {{ user.username }}. </h1>
+  <h1>Hello, {{ username }}. </h1>
   <p>We are glad to see you using our service.
   To reset your password, follow the link below:</p>
 
